--- a/vuejs-app/index.html
+++ b/vuejs-app/index.html
@@ -29,7 +29,7 @@ v-bind: can be abbreviated to just : before the attribute name.
         <!--to prevent event -->
         <br>
         <a href="#" @click.once="testMe">test me</a>
-        <!--to prevent multiple clicks, function called only once -->
+        <!--to prevent multiple clicks, method called only once -->
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
