--- a/vuejs-app/index.html
+++ b/vuejs-app/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <div id="app-root">
-        <h1>{{ name }}</h1>
+        <h1>{{ great('afternoon')}}</h1>
+        <h2>I am sorry</h2>
+        <p>{{ signature}}</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
